CHANGELOG

When		Who		What
==================================================================================================================
2016-05-27 	Richard Forth   Added INFO ITEM about LICENSE.
2016-05-27 	Richard Forth   Added LICENSE (Apache License Version 2.0). http://apache2buddy.pl/LICENSE
2016-05-27 	Richard Forth   Added the notice in the source code as follows:


   Copyright 2016 Richard Forth

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.

-----

The copyright line reads as my name, because I did a lot of work in making
this fork a whole new beast, and the previous project was never distributed
under any official license, I did get the blessing from Gus Maskowitz to
publish it under the Apache License 2.0.

The purpose of the license is to ensure that free software remains free, not
as in "free beer" but in "freedom". The freedom to derive new software from
this and to keep that software "free" too. 

But it is important to acknowldege too, that this is a derivative work from 
apachebuddy.pl. Even though it is not being maintained any more, I would like 
to acknowledge the talents of a few people:

Major Hayden - for his inspiring work on MySQLTuner.pl
Jacob Walcik - who is the credited author of apachebuddy.pl (see the first
few lines of the original script code at http:// apachebuddy.pl)
Gus Maskowitz - for his work on the script, though it is no longer maintained
Will Parsons - for hosting the original script at http://apachebuddy.pl
